Add header and nav bar. Need to style them

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,81 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+h1,h2,h3,h4,h5,h6{
+    color: white;
+    text-wrap: balance;
+}
+
+.header{
+    inline-size: 100vw;
+    block-size: 9.5rem;
+    text-align: center;
+    padding-block-start: 2.5em;
+    background-color: black;
+}
+
+.title{
+    padding-inline: 1em;
+}
+
+.nav{
+    block-size: 4rem;
+    inline-size: 15rem;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 1px blue solid;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    /* background-color: red; */
+}
+
+.nav-element{
+    position: relative;
+    /* background-color: blue; */
+}
+
+.nav-element::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    background-color: aquamarine;
+}
+
+/* .nav:focus::before{
+    top: 2;
+    background-color: honeydew;
+} */
+
+@media (min-width: 800px){
+    .nav{
+        block-size: 20rem;
+        inline-size: 15rem;
+        position: absolute;
+        top: 25%;
+        left: 20%;
+        transform: translateX(-50%);
+        flex-direction: column;
+        /* align-items: right; */
+        text-align: right;
+        padding-inline-end: 5px;
+        gap: 10px
+        /* flex-wrap: wrap;
+        gap: 5px; */
+    }
+
+    .nav-element:hover::before{
+        left: 3px;
+        right: -10px;
+        background-color: rgb(64, 71, 64);
+    }
+}
