--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@
     --body-color: #cfc8f4;
     --title-color: #f9f871;
     --links-color: #fffade;
+    --links-hover: rgba(255, 250, 222, 0.5)
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -58,6 +59,7 @@ body{
     text-align: center;
     padding-block-start: 2.5em;
     background-color: var(--banner-color);
+    box-shadow: 0 0 1em;
 }
 
 .title{
@@ -66,7 +68,7 @@ body{
 
 .nav{
     block-size: 4rem;
-    inline-size: 16rem;
+    inline-size: 20rem;
     position: absolute;
     top: 25%;
     left: 50%;
@@ -85,7 +87,7 @@ body{
 
 .links-container{
     min-block-size: 100%;
-    inline-size: 33%;
+    inline-size: 30%;
     /* display: inline; */
     position: absolute;
     top: 0%;
@@ -114,8 +116,9 @@ body{
 }
 .links-container:nth-of-type(1):hover > .link{
     left: -20px;
-    background-color: inherit;
-    border: 1px solid var(--links-color)
+    background-color: var(--links-hover);
+    border: 1px solid var(--links-color);
+    color: var(--banner-color);
 }
 
 .links-container:nth-of-type(2){
@@ -127,8 +130,9 @@ body{
 }
 .links-container:nth-of-type(2):hover> .link{
     top: -20px;
-    background-color: inherit;
-    border: 1px solid var(--links-color)
+    background-color: var(--links-hover);
+    border: 1px solid var(--links-color);
+    color: var(--banner-color);
     /* left: 50%;
     transform: translateX(-50%); */
 }
@@ -141,8 +145,9 @@ body{
 }
 .links-container:nth-of-type(3):hover> .link{
     right: -20px;
-    background-color: inherit;
-    border: 1px solid var(--links-color)
+    background-color: var(--links-hover);
+    border: 1px solid var(--links-color);
+    color: var(--banner-color);
 }
 
 /* .btn:hover{
@@ -160,13 +165,13 @@ body{
     /* background-color: yellowgreen; */
 }
 
-@media (min-width: 500px){
+@media (min-width: 700px){
     #container{
         grid-template-columns: repeat(2, auto);
     }
 }
 
-@media (min-width: 850px){
+@media (min-width: 1000px){
     #container{
         grid-template-columns: repeat(3, 1fr);
         --gaps: 2rem;
@@ -198,6 +203,16 @@ body{
         transform: translateX(0);
     }
 
+}
+
+.cardContainer:hover{
+    cursor: pointer;
+    border: 1px solid var(--links-color);
+    box-shadow: inset 0 0 0.5em var(--links-color), 0 0 0.5em var(--links-color);
+}
+
+.cardContainer:hover > h2{
+    filter: drop-shadow(0 0 0.05em var(--banner-color));
 }
 
 img{
